# Paper-PathFollowingSurvey

./: .gitignore  .gitmodules  LICENSE  README.md  install_script.sh
experiments_bringup/: CMakeLists.txt  package.xml
experiments_bringup/config/dev_configs/: personal_ros.yaml  ros_mvector.yaml  ros_myellow.yaml
experiments_bringup/config/simulation/mvector/: addons.yaml  control.yaml  nav.yaml  process.yaml
experiments_bringup/config/simulation/myellow/: control.yaml  nav.yaml  process.yaml
experiments_bringup/config/vehicles/mvector/: process.yaml
experiments_bringup/config/vehicles/myellow/: process.yaml
experiments_bringup/launch/: start_gazebo_simulation.launch  start_mission.launch  start_scenario.launch  start_vehicle.launch
experiments_bringup/launch/dev_launch/: gazebo_simulation.launch
experiments_bringup/src/: mission_launcher.py  switch_controllers.py  switch_paths.py
